--- a/src/main/resources/templates/hebrew/remove.html
+++ b/src/main/resources/templates/hebrew/remove.html
@@ -9,13 +9,13 @@
 
 <form method="post">
 
-    <div th:each="cheese : ${cheeses}" class="checkbox">
-        <input type="checkbox" name="cheeseIds" th:value="${cheese.id}" th:id="${cheese.id}"/>
-        <label th:for="${cheese.id}" th:text="${cheese.name}"></label>
+    <div th:each="word : ${hebrew_words}" class="checkbox">
+        <input type="checkbox" name="hebrewIds" th:value="${word.id}" th:id="${word.id}"/>
+        <label th:for="${word.id}" th:text="${word.word}"></label>
         <br />
     </div>
 
-    <input type="submit" value="Remove Cheese" />
+    <input type="submit" value="Remove Word" />
 </form>
 
 </body>
