backfill from merge nightmares

--- a/src/main/resources/templates/english/index.html
+++ b/src/main/resources/templates/english/index.html
@@ -15,9 +15,9 @@
 </ul>
 
 <nav>
-    <a href="/english/add">Add Word</a><br/>
-    <a href="/english/remove">Remove Word</a>
+    <a href="/english/add">Add Word</a> |
+    <a href="/english/remove">Remove Word</a> |
+    <a href="/english/search">Search Word</a>
 </nav>
-
 </body>
 </html>
