--- a/src/main/resources/templates/hebrew/index.html
+++ b/src/main/resources/templates/hebrew/index.html
@@ -26,9 +26,9 @@
 </table>
 
 <nav>
-    <a href="/hebrew/add">Add</a> |
-    <a href="/hebrew/remove">Remove</a> |
-    <a href="/hebrew/search">Search</a>
+    <a href="/hebrew/add">Add Word</a> |
+    <a href="/hebrew/remove">Remove Word</a> |
+    <a href="/hebrew/search">Search Word</a>
 </nav>
 
 </body>
