--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -11,6 +11,7 @@
 <body>
 
 <nav th:fragment="navigation">
+    <a href="/hebrew-dictionary">Home</a> |
     <a href="/hebrew">Hebrew</a> |
     <a href="/english">English</a> |
 </nav>
