--- a/src/main/resources/templates/hebrew/search.html
+++ b/src/main/resources/templates/hebrew/search.html
@@ -23,7 +23,7 @@
     </tr>
 
     <tr>
-        <td th:text="${resultW}"></td>
+        <td><a th:href="'/hebrew/view/' + ${resultID}" th:text="${resultW}"></a></td>
         <td th:text="${resultD}"></td>
     </tr>
 
