--- a/src/main/resources/templates/hebrew/index.html
+++ b/src/main/resources/templates/hebrew/index.html
@@ -19,7 +19,7 @@
     </tr>
 
     <tr th:each="word : ${hebrew_words}">
-        <td th:text="${word.word}"></td>
+        <td> <a th:href="'/hebrew/view/' + ${word.id}" th:text="${word.word}"></a></td>
         <td th:text="${word.description}"></td>
     </tr>
 
