--- a/src/main/resources/templates/hebrew/search.html
+++ b/src/main/resources/templates/hebrew/search.html
@@ -30,8 +30,8 @@
 </table>
 </p>
 <nav>
-    <a href="/hebrew/add">Add Word</a> |
-    <a href="/hebrew/remove">Remove Word</a>
+    <a href="/hebrew/add">Add English Word</a> |
+    <a href="/hebrew/remove">Remove English Word</a>
 </nav>
 
 </body>
