--- a/src/main/resources/templates/english/edit.html
+++ b/src/main/resources/templates/english/edit.html
@@ -9,7 +9,7 @@
 <form method="post">
     <div class="form-group">
         <label th:for="description">Definition</label>
-        <input class="form-control" type="text" name="Def" />
+        <input class="form-control" type="text" th:value ="${english.definition}" name="Def" />
     </div>
 
     <input type="submit" value="Edit Word" />
